CheckUnhandledOops check fails in ThreadSnapshot::initialize(...)

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 16
    • Affects Version/s: 16
    • Component/s: hotspot
    • None
    • svc
    • b16

      The following variables:

        oop blocker_object = NULL;
        oop blocker_object_owner = NULL;

      in method
      void ThreadSnapshot::initialize(ThreadsList * t_list, JavaThread* thread);

      are NULL but still might be corrupted by CheckUnhandledOops

            Assignee:
            Leonid Mesnik
            Reporter:
            Leonid Mesnik
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: