8253033: CheckUnhandledOops check fails in ThreadSnapshot::initialize(...)